--- a/style.css
+++ b/style.css
@@ -7,8 +7,8 @@
     top: 0px;
     left: 100px;
     width: 1200px;
-    height: 650px;
-    background-color: #0d1a2d;
+    height: 650px; 
+    background-color: #0a1322;
 }
 .header{
     width: 300px;
