--- a/style.css
+++ b/style.css
@@ -8,7 +8,7 @@
     left: 100px;
     width: 1200px;
     height: 650px; 
-    background-color: #0a1322;
+    background-color: #091324;
 }
 .header{
     width: 300px;
